@@ -45,15 +45,6 @@ namespace EngineFile
 		/// <param name="key">The name of the key in the map we need to set a value for</param>
 		/// <param name="value">The value the key will be set to</param>
 		static void SetValue(const string& key, const string& value);
-
-		/// <summary>
-		/// Saves global physics data from Elypso library to the config file
-		/// </summary>
-		static void SaveGlobalPhysicsData();
-		/// <summary>
-		/// Loads global physics data from the config file to Elypso Library
-		/// </summary>
-		static void LoadGlobalPhysicsData();
 	private:
 		static inline string configFilePath;
 
