@@ -69,3 +69,5 @@
 - improved gameobject save file formatting
 - saving scene camera data to scene file only in engine
 - delete old gameobject save file if object was renamed in inspector, mark scene as unsaved
+- deny changing selected gameobject name to any reserved name used by gameobjects not created by end user
+- deny setting imported asset name to any reserved name used by gameobjects not created by end user
